--- a/proyecto/botones/acordeon_Con_img/index.html
+++ b/proyecto/botones/acordeon_Con_img/index.html
@@ -8,7 +8,7 @@
     <title>Acordion</title>
 </head>
 <body>
-    <div class="acordion">
+    <div class="acordeon">
     <input id="activar" type="checkbox">
     <label for="activar"><p>Dar click para abrir</p></label>
     <hr>
