--- a/proyecto/sliders/Slider2_con_foto_y_texto/index.html
+++ b/proyecto/sliders/Slider2_con_foto_y_texto/index.html
@@ -11,11 +11,13 @@
     <section id="slider">
       <figure class="picture">
         <img  src="img/YoAnimado.jpeg" alt="soy yo animado">
-        <figcaption class="capiton">AGUSTIN MOLDAVSKY</figcaption>
+        <figcaption class="caption">AGUSTIN MOLDAVSKY</figcaption>
         <p>
-          Hola! Soy un apasionado desarrollador full stack Java con experiencia en el desarrollo de aplicaciones web y API REST robustas. Me especializo en la creación de proyectos innovadores utilizando las últimas tecnologías como Java, Spring Boot, Hibernate, HTML, CSS, JavaScript, pruebas unitarias con JUnit y Mockito, patrones de diseño MVC y TDD, y bases de datos MySQL. Tengo experiencia en el desarrollo de aplicaciones web utilizando Spring Boot y su suite. Además, tengo la capacidad para trabajar en equipo y resolver problemas de manera efectiva. ¡Es un placer conocerte!
+          Hola! Soy un apasionado desarrollador full stack Java con experiencia en el desarrollo de aplicaciones web y API REST robustas. Me especializo en la creación de proyectos innovadores utilizando las últimas tecnologías como Java, Spring Boot, Hibernate, HTML, CSS, JavaScript, pruebas unitarias con JUnit y Mockito, patrones de diseño MVC y TDD, y bases de datos MySQL. Tengo experiencia en el desarrollo de aplicaciones web utilizando Spring Boot y su suite. Además, tengo la capacidad para trabajar en equipo y resolver problemas de manera efectiva. <br>
+          <i>¡Es un placer conocerte!</i>
         </p>
       </figure>
+      
         
         <div><img src="img/Moldavsky Rodoni Agustin German-codoAcodo_page-0001.jpg" alt="Imagen 1"></div>
         <div><img src="img/Moldavsky Agustín 34430871_page-0001.jpg" alt="Imagen 2"></div>
