--- a/proyecto/template_basico_web/index.html
+++ b/proyecto/template_basico_web/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/index.css">
+  <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <title>AnimaWeb S&L</title>
 </head>
@@ -33,7 +33,7 @@
         <h1 >Diseñador web & Desarrollador java JR </h1>
       </div>
         <div class="container_foto_perfil">
-          <img src="/img/fotoPerfil.jpg" alt="foto de perfil personal"
+          <img src="./img/fotoPerfil.jpg" alt="foto de perfil personal"
           class="foto_perfil">
         </div>
        
@@ -46,8 +46,8 @@
     
      <nav class="nav">
         <input class="checkbox" type="checkbox">
-    <img class="icon amb" src="/svg/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="foto 3 rayas para el menu">
-    <img class="icon x" src="/svg/close_FILL0_wght400_GRAD0_opsz48.svg" alt="foto de una x">
+    <img class="icon amb" src="./svg/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="foto 3 rayas para el menu">
+    <img class="icon x" src="./svg/close_FILL0_wght400_GRAD0_opsz48.svg" alt="foto de una x">
   
     <div class="menu">
     <a href="#" class="nav_link">Inicio</a>
@@ -56,8 +56,6 @@
   </div>
 </nav>
 </div>
-
-
 
 
   <main class="main">
