--- a/proyecto/botones/boton_switch/boton_switch.html
+++ b/proyecto/botones/boton_switch/boton_switch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="button_style.css">
+    <link rel="stylesheet" href="boton_switch.css">
     <title>button switch</title>
 </head>
 <body>
@@ -12,9 +12,6 @@
         <input type="checkbox"  id="btn_switch">
         <label class="lbl_switch" for="btn_switch">
         </label>
-        <img class="img_icon" src="sol-y-luna_negro.png" alt="">
-        <img class="img_icon_luz" src="sol-y-luna.png" alt="">
-    <div class="fondo"></div>
     </div>
 </body>
 </html>
