--- a/proyecto/menu desplegable css y html/index.html
+++ b/proyecto/menu desplegable css y html/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="stylesheet" href="/style.css">
-    <title>menu</title>
-</head>
-<body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Menu Responsive</title>
+  </head>
+  <body>
     <main>
-    <nav class="navbar">
-        <h1>menu</h1>
-        <input class="checkbox" type="checkbox">
-      <img class="icon amb" src="/svg/menu_FILL0_wght400_GRAD0_opsz48.svg" alt="foto 3 rayas para el menu">
-      <img class="icon x" src="/svg/close_FILL0_wght400_GRAD0_opsz48.svg" alt="foto de una x">
-    
-    <ul class="menu">
-        <li><a href="#">Acerca de</a></l>
-        <li><a href="#">Cursos</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contacto</a></li>
-    </ul>
-    </nav>
+      <nav class="navbar">
+        <h1>Menu</h1>
+        <input class="checkbox" type="checkbox" />
+        <img class="icon amb" src="./svg/menu.svg" alt="Menú"/>
+        <img class="icon x" src="./svg/close.svg" alt="Cierra Menú" />
 
-
-</main>
-</body>
+        <ul class="menu">
+          <li><a href="#">Acerca de</a></li>
+          <li><a href="#">Cursos</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
+    </main>
+  </body>
 </html>
