importando la libreria desde la web para usar la clase de colorear

--- a/index.html
+++ b/index.html
@@ -218,5 +218,12 @@
         </div>
     </section>
     <script type="module" src="js/menu.js"></script>
+ 
+    <script  type="module">
+       import{ColorearHtml} from 'https://lionelstaricoff.github.io/paint-code/Paint.js';
+       new ColorearHtml();
+        
+        
+    </script>
 </body>
 </html>
