--- a/contenedorEjemplos.html
+++ b/contenedorEjemplos.html
@@ -214,5 +214,6 @@
         </div>
     </section>
     <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
