refactorizando el objeto loader para que ponga el css automaticamente al crear el objeto

--- a/contenedorEjemplos.html
+++ b/contenedorEjemplos.html
@@ -216,6 +216,6 @@
         </div>
     </section>
     <script type="module" src="js/index.js"></script>
-    <script type="module" src="js/main.js"></script>
+    <!-- <script type="module" src="js/main.js"></script> -->
 </body>
 </html>
