--- a/contenedorEjemplos.html
+++ b/contenedorEjemplos.html
@@ -81,40 +81,9 @@
             </div>
 
             <div class="ejemplo">
-                <div id="btn-contenedor"><button class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px" height="20px"></button></div>
-                <div id="ej-contenedor"></div>
+                <div id="btn-contenedor"><button id="boton-copiar" class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px" height="20px" title="Copiar código"></button></div>
+                <div id="ej-contenedor" class="codigo"></div>
                 <iframe id="iframe" name="codeFrame" width="100%" height="400px" frameborder="0"></iframe>
-                
-               
-                <!--                 
-                <div class="colorear">
-                    <header id="1"> encabezado</header>
-                    <header> encabezado</header>
-                    <main id="1">cuerpo</main>
-                    <footer class="new class"> pie de pagina</footer>
-                  <section>section</section>
-                    <h1>titulo</h1>
-                    <h1>titulo</h1>
-                    <h2>titulo 2</h2>
-                    <h3>titulo 3</h3>
-                    <h4>titulo 4</h4>
-                    <H5>titulo 5</H5>
-                    <H6>titulo 6</H6>
-                    <button> boton</button>
-                </div>
-                <div class="colorear">
-                    <header> encabezado</header>
-                    <main> cuerpo</main>
-                    <footer> pie de pagina</footer>
-                    <h1>titulo</h1>
-                    <h2>titulo 2</h2>
-                    <h3>titulo 3</h3>
-                    <h4>titulo 4</h4>
-                    <H5>titulo 5</H5>
-                    <H6>titulo 6</H6>
-                    <button> boton</button>
-                </div> -->
-
             </div>
         </div>
         <button id="btnVolverArriba"><a href="#inicio"><img src="./img/iconos/flecha-arriba.png"  alt="Al inicio"></a></button>
@@ -162,6 +131,7 @@
             </div>
         </div>
     </section>
+
     <section class="contribucion" id="contribucion">
         <div>
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
@@ -177,6 +147,7 @@
             </div>
         </div>
     </section>
+
     <section class="websDeInteres" id="websDeInteres">
         <div>
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
@@ -188,6 +159,7 @@
             </div>
         </div>
     </section>
+
     <section class="quienesSomos" id="quienesSomos">
         <div>
             <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
@@ -215,7 +187,9 @@
             </div>
         </div>
     </section>
+
     <script type="module" src="js/index.js"></script>
     <!-- <script type="module" src="js/main.js"></script> -->
+
 </body>
 </html>
