Se agrega dos ejemplos más de sliders

--- a/proyecto/sliders/slider manual y automatico/index.html
+++ b/proyecto/sliders/slider manual y automatico/index.html
@@ -17,7 +17,13 @@
         <i id="left" class="fa-solid fa-angle-left"> </i>
 
         <ul class="carousel">
-           
+           <!-- acá galeria
+                <li class="card">
+                    <div class="img"><img src="./img/Abadango Cluster Princess.jpeg" alt="Img of Abadango Cluster Princess" draggable="false"/></div>
+                    <h2>Abadango Cluster</h2>
+                    <span>ALIEN</span>
+                </li> 
+            -->
         </ul>
         <i id="right" class="fa-solid fa-angle-right"> </i>  
     </div>
