se habilita libreria en index.html

--- a/contenedorEjemplos.html
+++ b/contenedorEjemplos.html
@@ -57,8 +57,7 @@
                 <label for="check-2" class="checkbtn-2">
                     <img src="img/iconos/menu.png" alt="menú">
                 </label>
-                <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver
-                        al inicio</a></h5>
+                <h5 class="volver"><a href="#inicio"><img src="img/iconos/flecha-izq.png" alt="flecha izquierda">Volver al inicio</a></h5>
                 <h3>LIBRERIA</h3>
             </div>
 
@@ -190,6 +189,9 @@
 
     <script type="module" src="js/index.js"></script>
     <!-- <script type="module" src="js/main.js"></script> -->
-
+    <script  type="module">
+        import{ColorearHtml} from 'https://lionelstaricoff.github.io/paint-code/Paint.js';
+        new ColorearHtml();
+     </script>
 </body>
 </html>
