funcionando el boton de copiar a la papelera con errores

--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
 
     <script type="module" src="js/index.js"></script>
     <!-- <script type="module" src="js/main.js"></script> -->
-    <script  type="module">
+    <!-- <script  type="module">
         import{ColorearHtml} from 'https://lionelstaricoff.github.io/paint-code/Paint.js';
         new ColorearHtml();
-     </script>
+     </script> -->
 </body>
 </html>
