subiendo cambios con el fallo de revisar porque tira error al ejecutar new colorear() tira error de ansestro

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <section class="inicio" id="inicio">
+    <section class="inicio colorear" id="inicio">
         <nav class="menu">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
@@ -190,8 +190,8 @@
     <script type="module" src="js/index.js"></script>
     <!-- <script type="module" src="js/main.js"></script> -->
     <!-- <script  type="module">
-        import{ColorearHtml} from 'https://lionelstaricoff.github.io/paint-code/Paint.js';
-        new ColorearHtml();
+          import ColorearHtml from 'https://lionelstaricoff.github.io/paint-code/Paint.js';
+            new ColorearHtml();    
      </script> -->
 </body>
 </html>
