arreglando el problema de colorear con una variable global que extienda de la clase importada

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <section class="inicio colorear" id="inicio">
+    <section class="inicio " id="inicio">
         <nav class="menu">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
@@ -222,5 +222,9 @@
     }).catch(error => console.error(error));
     
      </script> -->
+
+     <script>
+         let colorearModule;
+     </script>
 </body>
 </html>
