arreglando error de la s como tag

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
             <div class="ejemplo">
                 <div id="btn-contenedor"><button id="boton-copiar" class="iconoCopy"><img src="img/iconos/copiar.png" alt="Copiar" width="20px" height="20px" title="Copiar código"></button></div>
-                <div id="ej-contenedor" class="codigo colorear"></div>
+                <div id="ej-contenedor" class="codigo coloreartext"></div>
                 <iframe id="iframe" name="codeFrame" width="100%" height="400px" frameborder="0"></iframe>
             </div>
         </div>
