Agregué TextFX01 a la librería

--- a/proyecto/cartelNotificacion/index.html
+++ b/proyecto/cartelNotificacion/index.html
@@ -3,17 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cartel Notificación</title>
 </head>
 <body>
-    <div class="ad-content">
-        <div class="ad-icon">
-          <img src='${this._iconSrc}' alt="Icono" />
-        </div>
-        <p class="ad-message">${this._message}</p>
-      </div>
-
-      <script src="./index.js">
-      </script>
+    
+      <script type="module" src="./index.js" defer></script>
 </body>
 </html>
