--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
         </div>
     </section>
 
+    <button id="btnVolverArriba">
+        <i src="./img/iconos/flecha-arriba.png"></i>
+    </button>
+
     <script type="module" src="js/index.js"></script>
     
 
