--- a/proyecto/TextosFX/TextFX_01/index.html
+++ b/proyecto/TextosFX/TextFX_01/index.html
@@ -10,7 +10,9 @@
             align-items: center;
             height: 100vh;
             font-family: Arial, sans-serif;
-            font-size: 2em;
+            font-size: 2.6em;
+            font-weight: bolder;
+            letter-spacing: 10px;
             color: orange;
         }
 
@@ -39,7 +41,7 @@
 </head>
 <body>
     <div class="title-container">
-        <h1>
+        <!-- <h1>
             <span class="animated-title" style="animation-delay: 0.1s;">T</span>
             <span class="animated-title" style="animation-delay: 0.2s;">u</span>
             <span class="animated-title" style="animation-delay: 0.3s;">&nbsp;</span>
@@ -54,7 +56,9 @@
             <span class="animated-title" style="animation-delay: 1.2s;">q</span>
             <span class="animated-title" style="animation-delay: 1.3s;">u</span>
             <span class="animated-title" style="animation-delay: 1.4s;">í</span>
-        </h1>
+        </h1> -->
     </div>
+
+    <script src="./index.js"></script>
 </body>
 </html>
