--- a/proyecto/TextosFX/TextFX_01/index.html
+++ b/proyecto/TextosFX/TextFX_01/index.html
@@ -3,40 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .title-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            font-family: Arial, sans-serif;
-            font-size: 2.6em;
-            font-weight: bolder;
-            letter-spacing: 10px;
-            color: orange;
-        }
-
-        .animated-title {
-            display: inline-block;
-            overflow: hidden;
-            white-space: nowrap;
-            opacity: 0;
-            transform: translateX(100%);
-            animation: slideIn 1s forwards;
-        }
-
-        /* Animación para cada letra */
-        @keyframes slideIn {
-            0% {
-                opacity: 0;
-                transform: translateX(100%);
-            }
-            100% {
-                opacity: 1;
-                transform: translateX(0);
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="./index.css">
     <title>Animación de Título</title>
 </head>
 <body>
@@ -59,6 +26,6 @@
         </h1> -->
     </div>
 
-    <script src="./index.js"></script>
+    <script type='module' src="./index.js"></script>
 </body>
 </html>
