--- a/proyecto/TextosFX/TextFX_01/index.html
+++ b/proyecto/TextosFX/TextFX_01/index.html
@@ -26,6 +26,6 @@
         </h1> -->
     </div>
 
-    <script type='module' src="./index.js"></script>
+    <script type='module' src="../../../js/libreriaGLA.js"></script>
 </body>
 </html>
