intentando subir el objeto btnFX

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             <h2>¿Quiénes somos?</h2>
 
-            <p>Nosotros, un grupo de apasionados programadores, hemos creado
+            <p>Nosotros, un grupo de dedicados programadores, hemos creado
                 esta <b>biblioteca de recursos</b>, para facilitar tu camino en el fascinante mundo del desarrollo
                 de software.</p>
             <br>
